Added script to minify js and css, included minified scripts and css in index.html, removed unnecessary css classes

--- a/index.html
+++ b/index.html
@@ -5,22 +5,15 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <!-- Site Properties -->
   <title>Studiodottormacchi</title>
-
   <!-- Import semantic ui -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.0/dist/semantic.min.css">
   <!-- Import font awesome -->
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-  <!-- Buttons and cool effects -->
-  <link rel="stylesheet" type="text/css" href="./css/default.css" />
-  <link rel="stylesheet" type="text/css" href="css/component-buttons.css" />
-  <link rel="stylesheet" type="text/css" href="css/component-modals.css" />
-  <script src="./js/modernizr.custom.js"></script>
-
-  <!-- custom css -->
+  <!-- Main CSS file -->
+  <link rel="stylesheet" type="text/css" href="./css/main.min.css">
+  <!-- Custom CSS overrides -->
   <link rel="stylesheet" type="text/css" href="./css/custom.css">
 </head>
 <body>
@@ -76,9 +69,9 @@
         <div class="row">
           <div class="sixteen wide column">
             <ul class="hero-icon hero-list">
-              <li><i class="fa fa-phone"></i>&nbsp;0332-xxxxxx</li>
+              <li><i class="fa fa-phone"></i>&nbsp;0332 - 287631</li>
               <li><i class="fa fa-envelope"></i>&nbsp;info@studiodottormacchi.it</li>
-              <li><i class="fa fa-clock-o"></i> Mon - Sat 8.00 - 18.00</li>
+              <li><i class="fa fa-clock-o"></i> Lun - Ven 09:00 - 12:30 / 15:00 - 18:00</li>
             </ul>
           </div>
         </div>
@@ -98,9 +91,9 @@
       <div class="ui middle aligned stackable grid container">
         <div class="row">
           <div class="eight wide column">
-            <h3 class="ui header">Visite specialistiche di check-up</h3>
-            <p>Prenota subita la tua visita via telefono: ogni visita ha un costo di xxx&nbsp;&euro;</p>
-            <h3 class="ui header">Esami e rilascio certificati medici sanitari</h3>
+            <h3 class="ui header">Visite specialistiche</h3>
+            <p>Prenota subita la tua visita via telefono allo 0332 - 287631</p>
+            <h3 class="ui header">Esami specialistici</h3>
             <p>Visualizza tutti gli esami effettuati nella struttura alla pagina dedicata, <a href="">qui</a>.</p>
           </div>
           <div class="six wide right floated column">
@@ -113,7 +106,7 @@
       <div class="ui equal width stackable internally celled grid">
         <div class="center aligned row">
           <div class="column">
-            <h3>"What a Company"</h3>
+            <h3>Collaboratori</h3>
             <p>That is what they all say about us</p>
           </div>
           <div class="column">
@@ -187,14 +180,11 @@
   <footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.0/dist/semantic.min.js"></script>
-    <script type="text/javascript" src="./js/custom.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/modalEffects.js"></script>
+    <script type="text/javascript" src="./js/main.min.js"></script>
     <script>
       // this is important for IEs
       var polyfilter_scriptpath = '/js/';
     </script>
-    <script src="js/cssParser.js"></script>
     <script src="js/css-filters-polyfill.js"></script>
   </footer>
 </body>
