--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="format-detection" content="telephone=no">
   <!-- Site Properties -->
   <title>Studiodottormacchi</title>
   <!-- Import semantic ui -->
@@ -18,14 +19,6 @@
   <link rel="stylesheet" type="text/css" href="./css/custom.min.css">
 </head>
 <body>
-  <!-- Following Menu -->
-  <div class="ui large top fixed hidden menu">
-    <div class="ui container">
-      <a class="active item">Home</a>
-      <a class="item">Esami</a>
-      <a class="item">Contatti</a>
-    </div>
-  </div>
 
   <!-- Sidebar Menu -->
   <div class="ui vertical inverted sidebar menu">
@@ -37,7 +30,6 @@
   <!-- Page Contents -->
   <div class="pusher">
     <div class="ui inverted vertical masthead center aligned segment landing-image">
-
       <div class="ui container">
         <div class="ui large secondary inverted pointing menu">
           <a class="toc item">
@@ -48,7 +40,6 @@
           <a class="item">Contatti</a>
         </div>
       </div>
-
       <div class="ui text container">
         <h1 class="ui inverted header">
           <span class="hero">Studio Medico <span class="hero-color">Dottor Macchi</span></span>
@@ -57,12 +48,11 @@
         <div class="container">
           <section>
             <p>
-              <button class="btn btn-1 btn-1e md-trigger" data-modal="modal-12"><i class="phone icon rotated no-mobile"></i>&nbsp;Contattaci</button>
+              <!--<button class="btn btn-1 btn-1e md-trigger" data-modal="modal-12"><i class="phone icon rotated no-mobile"></i>&nbsp;Contattaci</button>-->
             </p>
           </section>
         </div>
       </div>
-
     </div>
 
     <div class="ui vertical stripe segment hero-row">
@@ -70,8 +60,8 @@
         <div class="row">
           <div class="sixteen wide column">
             <ul class="hero-icon hero-list">
-              <li><i class="fa fa-phone"></i>&nbsp;0332 - 287631</li>
-              <li><i class="fa fa-envelope"></i>&nbsp;info@studiodottormacchi.it</li>
+              <li><i class="fa fa-phone"></i>&nbsp;<a style="color: white;" href="tel:+39-0332-287-631">0332 - 287631</a></li>
+              <li><i class="fa fa-envelope"></i>&nbsp;<a style="color: white;" href="mailto:info@studiodottormacchi.it">info@studiodottormacchi.it</a></li>
               <li><i class="fa fa-clock-o"></i> Lun - Ven 09:00 - 12:30 / 15:00 - 18:00</li>
             </ul>
           </div>
@@ -88,32 +78,18 @@
         </div>
       </div>
     </section>
-    <div class="ui vertical stripe segment">
-      <div class="ui middle aligned stackable grid container">
-        <div class="row">
-          <div class="eight wide column">
-            <h3 class="ui header">Visite specialistiche</h3>
-            <p>Prenota subita la tua visita via telefono allo 0332 - 287631</p>
-            <h3 class="ui header">Esami specialistici</h3>
-            <p>Visualizza tutti gli esami effettuati nella struttura alla pagina dedicata, <a href="">qui</a>.</p>
-          </div>
-          <div class="six wide right floated column">
-          </div>
-        </div>
-      </div>
-    </div>
 
     <div class="ui vertical stripe quote segment">
       <div class="ui equal width stackable internally celled grid">
         <div class="center aligned row">
           <div class="column">
-            <h3>Collaboratori</h3>
-            <p>That is what they all say about us</p>
+            <h3>PRESTAZIONI</h3>
+            <p>Visualizza tutti gli esami effettuati nella struttura alla pagina dedicata, <a class="hero-color" href="#">qui</a>.</p>
           </div>
           <div class="column">
-            <h3>"I shouldn't have gone with their competitor."</h3>
+            <h3>PRENOTAZIONI</h3>
             <p>
-              <img src="./images/avatar/nan.jpg" class="ui avatar image"> <b>Nan</b> Chief Fun Officer Acme Toys
+              <i class="clockwise rotated phone icon"></i><b>Prenota</b> la tua visita telefonando allo <a class="hero-color" href="tel:+39-0332-287-631">0332 - 287631</a>
             </p>
           </div>
         </div>
@@ -122,15 +98,78 @@
 
     <div class="ui vertical stripe segment">
       <div class="ui text container">
-        <h3 class="ui header">Breaking The Grid, Grabs Your Attention</h3>
-        <p>Instead of focusing on content creation and hard work, we have learned how to master the art of doing nothing by providing massive amounts of whitespace and generic content that can seem massive, monolithic and worth your attention.</p>
-        <a class="ui large button">Read More</a>
-        <h4 class="ui horizontal header divider">
-          <a href="#">Case Studies</a>
-        </h4>
-        <h3 class="ui header">Did We Tell You About Our Bananas?</h3>
-        <p>Yes I know you probably disregarded the earlier boasts as non-sequitur filler content, but its really true. It took years of gene splicing and combinatory DNA research, but our bananas can really dance.</p>
-        <a class="ui large button">I'm Still Quite Interested</a>
+        <div class="center aligned row">
+          <h3 class="ui header hero-center">SPECIALISTI</h3>
+        </div>
+      </div>
+      <div class="ui container">
+        <div class="body-card">
+          <div class="ui three stackable cards">
+            <div class="ui move reveal">
+              <div class="visible content">
+                <div class="ui card">
+                  <img class="ui image" src="./images/avatar/t.png">
+                  <div class="content">
+                    <div class="header">Alberto Macchi</div>
+                    <div class="description">
+                      <ul>
+                        <li>Specialista in Otorinolaringoiatria</li>
+                        <li>Dirigente Medico Asst Settelaghi</li>
+                        <li>Varese Clinica Otorinolaringoiatrica Università degli Studi dell'Insubria</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div  class="extra content" >
+                    <div class="ui labeled icon menu">
+                      <a class="item"><i class="wait icon"></i>2h 16min</a>
+                      <a class="item"><i class="food icon"></i>6 servings</a>
+                      <a class="item"><i class="signal icon"></i>Easy</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="hidden content">
+                <div class="ui card">
+                  <div class="content">
+                    <div class="ui pointing secondary menu">
+                      <div class="item active" data-tab="ingredients">Ingredients</div>
+                      <div class="item" data-tab="directions">Directions</div>
+                    </div>
+                    <div class="ui tab active" data-tab="ingredients">
+                      <h3>For pasta</h3>
+                      <div class="ui list">
+                        <div class="item"><i class="check circle red icon"></i>2 lb Italian "00" flour or all-purpose flour</div>
+                        <div class="item"><i class="check circle red icon"></i>1 oz fresh yeast</div>
+                        <div class="item"><i class="check circle red icon"></i>2 cups water</div>
+                        <div class="item"><i class="check circle red icon"></i>⅜ oz salt</div>
+                      </div>
+                      <h3>For dressing</h3>
+                      <div class="ui small list">
+                        <div class="item"><i class="check circle red icon"></i>½ cup extra virgin olive oil</div>
+                        <div class="item"><i class="check circle red icon"></i>1 lb mozzarella cheese</div>
+                        <div class="item"><i class="check circle red icon"></i>basil leaves to taste</div>
+                        <div class="item"><i class="check circle red icon"></i>1 lb canned tomatoes</div>
+                        <div class="item"><i class="check circle red icon"></i>salt to taste</div>
+                      </div>
+                    </div>
+                    <div class="ui tab" data-tab="directions">
+                      <div class="ui small list">
+                        <div class="item"><span class="ui red circular label">1</span> On a wooden or marble work surface, shape the flour into a well. Place the yeast, salt and warm water in the center. Be careful not to let the salt come in contact with the yeast. </div>
+                        <div class="item"><span class="ui red circular label">2</span> Knead the dough vigorously with your hands for 15-20 minutes, or in a mixer, until the dough is soft and smooth.</div>
+                        <div class="item"><span class="ui red circular label">3</span> Once you have the right consistency, adding a bit of water or flour if necessary, shape the dough into a ball. Cover with a plastic bowl so that the dough is protected from the air. Let rise for 3 or 4 hours at room temperature for about an hour in a warm place. </div>
+                        <div class="item"><span class="ui red circular label">4</span> Once the dough will be doubled in volume, ricavatene 6 loaves, modellateli in spherical shapes, cover with a sheet of plastic wrap and let them rise at room temperature for a couple of hours or in a warm place for about 45 minutes.</div>
+                        <div class="item"><span class="ui red circular label">5</span> As soon as the loaves have doubled in volume, prepare the tomato sauce and place it in a bowl. Add a pinch of salt and 1/3 of the olive oil.</div>
+                        <div class="item"><span class="ui red circular label">6</span> Knead the dough, then flattening them using your fingers.</div>
+                        <div class="item"><span class="ui red circular label">7</span> Use a ladle or a spoon to spread a good amount of tomato sauce on the pizza. Then, cover with mozzarella, torn into pieces. Garnish with a couple leaves of basil and bake in a 480° F oven for 5 or 6 minutes.</div>
+                        <div class="item"><span class="ui red circular label">8</span> Once ready, remove the pizza from the oven. Garnish with more basil and a drizzle of oil. Serve immediately.</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -182,6 +221,11 @@
     <script src="./js/jquery-3.3.1.slim.min.js"></script>
     <script src="./js/semantic.min.js"></script>
     <script type="text/javascript" src="./js/main.min.js"></script>
+    <script type="text/javascript">
+      $( document ).ready(function() {
+        $('.menu .item').tab();
+      });
+    </script>
     <script>
       // this is important for IEs
       var polyfilter_scriptpath = '/js/';
