--- a/index.html
+++ b/index.html
@@ -19,211 +19,209 @@
     <link rel="stylesheet" type="text/css" href="./css/custom.min.css">
   </head>
   <body>
-  <!-- Sidebar Menu -->
-  <div class="ui vertical inverted sidebar menu">
-    <a class="active item">Home</a>
-    <a class="item">Prestazioni</a>
-    <a class="item">Contatti</a>
-  </div>
+    <!-- Sidebar Menu -->
+    <div class="ui vertical inverted sidebar menu">
+      <a href="#" class="active item">Home</a>
+      <a href="prestazioni.html" class="item">Prestazioni</a>
+    </div>
 
-  <!-- Page Contents -->
-  <div class="pusher">
-    <div class="ui inverted vertical masthead center aligned segment landing-image">
-      <div class="ui container">
-        <div class="ui large secondary inverted pointing menu">
-          <a class="toc item">
-            <i class="sidebar icon"></i>
-          </a>
-          <a class="active item">Home</a>
-          <a class="item">Prestazioni</a>
-          <a class="item">Contatti</a>
+    <!-- Page Contents -->
+    <div class="pusher">
+      <div class="ui inverted vertical masthead center aligned segment landing-image">
+        <div class="ui container">
+          <div class="ui large secondary inverted pointing menu">
+            <a class="toc item">
+              <i class="sidebar icon"></i>
+            </a>
+            <a href="#" class="active item">Home</a>
+            <a href="prestazioni.html" class="item">Prestazioni</a>
+          </div>
+        </div>
+        <div class="ui text container">
+          <h1 class="ui inverted header">
+            <span class="hero">Studio Medico <span class="hero-color">Dottor Macchi</span></span>
+          </h1>
+          <h2>Visite mediche specialistiche</h2>
+          <div class="container">
+            <section>
+              <p>
+                <!--<button class="btn btn-1 btn-1e md-trigger" data-modal="modal-12"><i class="phone icon rotated no-mobile"></i>&nbsp;Contattaci</button>-->
+              </p>
+            </section>
+          </div>
         </div>
       </div>
-      <div class="ui text container">
-        <h1 class="ui inverted header">
-          <span class="hero">Studio Medico <span class="hero-color">Dottor Macchi</span></span>
-        </h1>
-        <h2>Visite mediche specialistiche</h2>
-        <div class="container">
-          <section>
-            <p>
-              <!--<button class="btn btn-1 btn-1e md-trigger" data-modal="modal-12"><i class="phone icon rotated no-mobile"></i>&nbsp;Contattaci</button>-->
+
+      <div class="ui vertical stripe segment hero-row">
+        <div class="ui middle aligned stackable grid container">
+          <div class="row">
+            <div class="sixteen wide column">
+              <ul class="hero-icon hero-list">
+                <li><i class="fa fa-phone"></i>&nbsp;<a style="color: white;" href="tel:+39-0332-287-631">0332 - 287631</a></li>
+                <li><i class="fa fa-envelope"></i>&nbsp;<a style="color: white;" href="mailto:info@studiodottormacchi.it">info@studiodottormacchi.it</a></li>
+                <li><i class="fa fa-clock-o"></i> Lun - Ven 09:00 - 12:30 / 15:00 - 18:00</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <section>
+        <div class="row fullwidth">
+          <div class="col-xs-12 text-center">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2780.3963545024967!2d8.818780415399088!3d45.82334651742801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47867e2e362232ef%3A0x53f6cf630791a992!2sVia+Giulio+Cesare+Procaccini%2C+24%2C+21100+Varese+VA!5e0!3m2!1sen!2sit!4v1519597554373" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </section>
+
+      <div class="ui vertical stripe quote segment">
+        <div class="ui equal width stackable internally celled grid">
+          <div class="center aligned row">
+            <div class="column">
+              <h3>PRESTAZIONI</h3>
+              <p>Visualizza tutti gli esami effettuati nella struttura alla pagina dedicata, <a href="prestazioni.html" class="hero-color" href="#">qui</a>.</p>
+            </div>
+            <div class="column">
+              <h3>PRENOTAZIONI</h3>
+              <p>
+                <i class="clockwise rotated phone icon"></i><b>Prenota</b> la tua visita telefonando allo <a class="hero-color" href="tel:+39-0332-287-631">0332 - 287631</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="ui vertical stripe segment" style="border-bottom: none !important;">
+        <div class="ui text container">
+          <div class="center aligned row">
+            <h3 class="ui header hero-center hero-padding">SPECIALISTI</h3>
+          </div>
+        </div>
+        <div class="ui container">
+          <div class="ui raised three stackable cards">
+            <div class="card">
+              <div class="image">
+                <img src="./images/avatar/alberto_macchi.jpg">
+              </div>
+              <div class="content">
+                <div class="header">Alberto Macchi</div>
+                <div class="meta"><i class="calendar check outline icon"></i>&nbsp;Martedì e Venerdì</div>
+                <div class="description">
+                  <div class="ui list">
+                    <div class="item">Specialista in Otorinolaringoiatria</div>
+                    <div class="item">Dirigente Medico Asst Settelaghi - Varese</div>
+                    <div class="item">Clinica Otorinolaringoiatrica Università degli Studi dell'Insubria</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img src="./images/avatar/paola_terranova.jpg">
+              </div>
+              <div class="content">
+                <div class="header">Paola Terranova</div>
+                <div class="meta"><i class="calendar check outline icon"></i>&nbsp;Venerdì</div>
+                <div class="description">
+                  <div class="ui list">
+                    <div class="item">Specialista in Otorinolaringoiatria</div>
+                    <div class="item">Dirigente Medico Asst Settelaghi - Varese</div>
+                    <div class="item">Clinica Otorinolaringoiatrica Università degli Studi dell'Insubria</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img src="./images/avatar/elena_digilio.jpg">
+              </div>
+              <div class="content">
+                <div class="header">Elena Digilio</div>
+                <div class="meta"><i class="calendar check outline icon"></i>&nbsp;Giovedì</div>
+                <div class="description">
+                  <div class="ui list">
+                    <div class="item">Specialista in Otorinolaringoiatria</div>
+                    <div class="item">Dirigente Medico Asst Settelaghi - Varese</div>
+                    <div class="item">Clinica Otorinolaringoiatrica Università degli Studi dell'Insubria</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img src="./images/avatar/alberico_motolese.jpg">
+              </div>
+              <div class="content">
+                <div class="header">Alberico Motolese</div>
+                <div class="meta"><i class="calendar check outline icon"></i>&nbsp;Mercoledì</div>
+                <div class="description">
+                  <div class="ui list">
+                    <div class="item">Specialista in Dermatologia ed Allergologia</div>
+                    <div class="item">Asst Settelaghi - Varese</div>
+                    <div class="item">Direttore S.C. Dermatologia</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img src="./images/avatar/raffaella_nisoli.jpg">
+              </div>
+              <div class="content">
+                <div class="header">Nisoli Raffaella</div>
+                <div class="meta"><i class="calendar check outline icon"></i>&nbsp;lunedì e martedì</div>
+                <div class="description">
+                  <div class="ui list">
+                    <div class="item">Specialista in Fisiatria</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="ui grid container">
+        <div class="sixteen wide column">
+          <h3 class="ui header hero-center hero-padding" style="font-size: 1.7em;">LA NOSTRA STORIA</h3>
+          <div class="ui segment">
+            <span class="ui ribbon label">Lo studio</span>
+            <p style="padding-top: 10px; text-align: justify;">Lo Studio del Dottor Macchi ha iniziato la sua attività nell'anno 1993 e si è sviluppato nel corso degli anni, offrendo ulteriori prestazioni specialistiche e strumentali, attraverso la collaborazione di vari specialisti.
+              Le varie attività diagnostiche hanno permesso di inquadrare le problematiche dei pazienti in breve tempo offrendo un servizio esclusivo.
+              Inoltre il continuo sviluppo della formazione in ambito sanitario ha permesso di mantenere uno standard qualitativo professionale elevato.
             </p>
-          </section>
-        </div>
-      </div>
-    </div>
-
-    <div class="ui vertical stripe segment hero-row">
-      <div class="ui middle aligned stackable grid container">
-        <div class="row">
-          <div class="sixteen wide column">
-            <ul class="hero-icon hero-list">
-              <li><i class="fa fa-phone"></i>&nbsp;<a style="color: white;" href="tel:+39-0332-287-631">0332 - 287631</a></li>
-              <li><i class="fa fa-envelope"></i>&nbsp;<a style="color: white;" href="mailto:info@studiodottormacchi.it">info@studiodottormacchi.it</a></li>
-              <li><i class="fa fa-clock-o"></i> Lun - Ven 09:00 - 12:30 / 15:00 - 18:00</li>
-            </ul>
           </div>
         </div>
       </div>
-    </div>
-
-    <section>
-      <div class="row fullwidth">
-        <div class="col-xs-12 text-center">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2780.3963545024967!2d8.818780415399088!3d45.82334651742801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47867e2e362232ef%3A0x53f6cf630791a992!2sVia+Giulio+Cesare+Procaccini%2C+24%2C+21100+Varese+VA!5e0!3m2!1sen!2sit!4v1519597554373" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
-      </div>
-    </section>
-
-    <div class="ui vertical stripe quote segment">
-      <div class="ui equal width stackable internally celled grid">
-        <div class="center aligned row">
-          <div class="column">
-            <h3>PRESTAZIONI</h3>
-            <p>Visualizza tutti gli esami effettuati nella struttura alla pagina dedicata, <a class="hero-color" href="#">qui</a>.</p>
-          </div>
-          <div class="column">
-            <h3>PRENOTAZIONI</h3>
-            <p>
-              <i class="clockwise rotated phone icon"></i><b>Prenota</b> la tua visita telefonando allo <a class="hero-color" href="tel:+39-0332-287-631">0332 - 287631</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="ui vertical stripe segment" style="border-bottom: none !important;">
-      <div class="ui text container">
-        <div class="center aligned row">
-          <h3 class="ui header hero-center hero-padding">SPECIALISTI</h3>
-        </div>
-      </div>
-      <div class="ui container">
-        <div class="ui raised three stackable cards">
-          <div class="card">
-            <div class="image">
-              <img src="./images/avatar/alberto_macchi.jpg">
-            </div>
-            <div class="content">
-              <div class="header">Alberto Macchi</div>
-              <div class="meta"><i class="calendar check outline icon"></i>&nbsp;Martedì e Venerdì</div>
-              <div class="description">
-                <div class="ui list">
-                  <div class="item">Specialista in Otorinolaringoiatria</div>
-                  <div class="item">Dirigente Medico Asst Settelaghi - Varese</div>
-                  <div class="item">Clinica Otorinolaringoiatrica Università degli Studi dell'Insubria</div>
-                </div>
+      <div class="ui hidden divider"></div>
+      <div class="ui inverted vertical footer segment">
+        <div class="ui container">
+          <div class="ui stackable inverted divided equal height stackable grid">
+            <div class="three wide column">
+              <h4 class="ui inverted header">About</h4>
+              <div class="ui inverted link list">
+                <a href="#" class="item">Sitemap</a>
+                <a href="#" class="item">Contact Us</a>
+                <a href="#" class="item">Religious Ceremonies</a>
+                <a href="#" class="item">Gazebo Plans</a>
               </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="image">
-              <img src="./images/avatar/paola_terranova.jpg">
-            </div>
-            <div class="content">
-              <div class="header">Paola Terranova</div>
-              <div class="meta"><i class="calendar check outline icon"></i>&nbsp;Venerdì</div>
-              <div class="description">
-                <div class="ui list">
-                  <div class="item">Specialista in Otorinolaringoiatria</div>
-                  <div class="item">Dirigente Medico Asst Settelaghi - Varese</div>
-                  <div class="item">Clinica Otorinolaringoiatrica Università degli Studi dell'Insubria</div>
-                </div>
+            <div class="three wide column">
+              <h4 class="ui inverted header">Services</h4>
+              <div class="ui inverted link list">
+                <a href="#" class="item">Banana Pre-Order</a>
+                <a href="#" class="item">DNA FAQ</a>
+                <a href="#" class="item">How To Access</a>
+                <a href="#" class="item">Favorite X-Men</a>
               </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="image">
-              <img src="./images/avatar/elena_digilio.jpg">
-            </div>
-            <div class="content">
-              <div class="header">Elena Digilio</div>
-              <div class="meta"><i class="calendar check outline icon"></i>&nbsp;Giovedì</div>
-              <div class="description">
-                <div class="ui list">
-                  <div class="item">Specialista in Otorinolaringoiatria</div>
-                  <div class="item">Dirigente Medico Asst Settelaghi - Varese</div>
-                  <div class="item">Clinica Otorinolaringoiatrica Università degli Studi dell'Insubria</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="image">
-              <img src="./images/avatar/alberico_motolese.jpg">
-            </div>
-            <div class="content">
-              <div class="header">Alberico Motolese</div>
-              <div class="meta"><i class="calendar check outline icon"></i>&nbsp;Mercoledì</div>
-              <div class="description">
-                <div class="ui list">
-                  <div class="item">Specialista in Dermatologia ed Allergologia</div>
-                  <div class="item">Asst Settelaghi - Varese</div>
-                  <div class="item">Direttore S.C. Dermatologia</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="image">
-              <img src="./images/avatar/raffaella_nisoli.jpg">
-            </div>
-            <div class="content">
-              <div class="header">Nisoli Raffaella</div>
-              <div class="meta"><i class="calendar check outline icon"></i>&nbsp;lunedì e martedì</div>
-              <div class="description">
-                <div class="ui list">
-                  <div class="item">Specialista in Fisiatria</div>
-                </div>
-              </div>
+            <div class="seven wide column">
+              <h4 class="ui inverted header">Footer Header</h4>
+              <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="ui grid container">
-      <div class="sixteen wide column">
-        <h3 class="ui header hero-center hero-padding" style="font-size: 1.7em;">LA NOSTRA STORIA</h3>
-        <div class="ui segment">
-          <span class="ui ribbon label">Lo studio</span>
-          <p style="padding-top: 10px; text-align: justify;">Lo Studio del Dottor Macchi ha iniziato la sua attività nell'anno 1993 e si è sviluppato nel corso degli anni, offrendo ulteriori prestazioni specialistiche e strumentali, attraverso la collaborazione di vari specialisti.
-            Le varie attività diagnostiche hanno permesso di inquadrare le problematiche dei pazienti in breve tempo offrendo un servizio esclusivo.
-            Inoltre il continuo sviluppo della formazione in ambito sanitario ha permesso di mantenere uno standard qualitativo professionale elevato.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="ui hidden divider"></div>
-    <div class="ui inverted vertical footer segment">
-      <div class="ui container">
-        <div class="ui stackable inverted divided equal height stackable grid">
-          <div class="three wide column">
-            <h4 class="ui inverted header">About</h4>
-            <div class="ui inverted link list">
-              <a href="#" class="item">Sitemap</a>
-              <a href="#" class="item">Contact Us</a>
-              <a href="#" class="item">Religious Ceremonies</a>
-              <a href="#" class="item">Gazebo Plans</a>
-            </div>
-          </div>
-          <div class="three wide column">
-            <h4 class="ui inverted header">Services</h4>
-            <div class="ui inverted link list">
-              <a href="#" class="item">Banana Pre-Order</a>
-              <a href="#" class="item">DNA FAQ</a>
-              <a href="#" class="item">How To Access</a>
-              <a href="#" class="item">Favorite X-Men</a>
-            </div>
-          </div>
-          <div class="seven wide column">
-            <h4 class="ui inverted header">Footer Header</h4>
-            <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <footer>
+    <footer>
       <script src="./js/jquery-3.3.1.slim.min.js"></script>
       <script src="./js/semantic.min.js"></script>
       <script type="text/javascript" src="./js/main.min.js"></script>
@@ -237,6 +235,6 @@
         var polyfilter_scriptpath = '/js/';
       </script>
       <script src="js/css-filters-polyfill.min.js"></script>
-  </footer>
+    </footer>
   </body>
 </html>
