--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
           </div>
         </div>
       </div>
-
+      <div style="margin-bottom: 20px"></div>
+      <!--
       <div class="ui vertical stripe segment" style="border-bottom: none !important;">
         <div class="ui text container">
           <div class="center aligned row">
@@ -171,7 +172,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>-->
       <div class="ui grid container">
         <div class="sixteen wide column">
           <h3 class="ui header hero-center hero-padding" style="font-size: 1.7em;">LA NOSTRA STORIA</h3>
