--- a/pages/prestazioni.html
+++ b/pages/prestazioni.html
@@ -47,9 +47,9 @@
         <div class="ui container">
           <div class="ui raised three stackable cards">
             <div class="card">
-              <!--<div class="image">
-                <img src="./images/avatar/alberto_macchi.jpg">
-              </div>-->
+              <div class="image">
+                <img src="../images/visite specialistiche.jpg">
+              </div>
               <div class="content">
                 <div class="header">Visite specialistiche</div>
                 <div class="description">
@@ -63,9 +63,9 @@
               </div>
             </div>
             <div class="card">
-              <!--<div class="image">
-                <img src="./images/avatar/alberto_macchi.jpg">
-              </div>-->
+              <div class="image">
+                <img src="../images/immagine polisonno.jpg">
+              </div>
               <div class="content">
                 <div class="header">Polisonnografie</div>
                 <div class="description">
@@ -77,9 +77,9 @@
               </div>
             </div>
             <div class="card">
-              <!--<div class="image">
-                <img src="./images/avatar/alberto_macchi.jpg">
-              </div>-->
+              <div class="image">
+                <img src="../images/rinomanometria.jpg">
+              </div>
               <div class="content">
                 <div class="header">Rinomanometrie</div>
                 <div class="description">
@@ -93,6 +93,9 @@
               </div>
             </div>
             <div class="card">
+              <div class="image">
+                <img src="../images/endoscopia.png">
+              </div>
               <div class="content">
                 <div class="header">Endoscopie</div>
                 <div class="description">
@@ -104,25 +107,26 @@
               </div>
             </div>
             <div class="card">
-              <!--<div class="image">
-                <img src="./images/avatar/alberto_macchi.jpg">
-              </div>-->
+              <div class="image">
+                <img src="../images/smell_1.jpg">
+              </div>
               <div class="content">
                 <div class="header">Olfattometrie</div>
                 <div class="description">
                   <div class="ui list">
                     <div class="item">Olfattometria adulti</div>
                     <div class="item">Olfattometria pediatrica</div>
+                    <div class="item">Citologia nasale</div>
                   </div>
                 </div>
               </div>
             </div>
             <div class="card">
-              <!--<div class="image">
-                <img src="./images/avatar/alberto_macchi.jpg">
-              </div>-->
+              <div class="image">
+                <img src="../images/varie.jpg">
+              </div>
               <div class="content">
-                <div class="header">Vari</div>
+                <div class="header">Varie</div>
                 <div class="description">
                   <div class="ui list">
                     <div class="item">Visita foniatrica</div>
@@ -170,10 +174,10 @@
       </div>
     </div>
     <footer>
-      <script src="../js/jquery-3.3.1.slim.min.js"></script>
-      <script src="../js/semantic.min.js"></script>
-      <script type="text/javascript" src="../js/main.min.js"></script>
-      <script type="text/javascript">
+      <script src="../js/jquery-3.3.1.slim.min.js" async defer></script>
+      <script src="../js/semantic.min.js" async defer></script>
+      <script type="text/javascript" src="../js/main.min.js" async defer></script>
+      <script type="text/javascript" async defer>
         $( document ).ready(function() {
           $('.menu .item').tab();
         });
@@ -182,7 +186,7 @@
         // this is important for IEs
         var polyfilter_scriptpath = '/js/';
       </script>
-      <script src="../js/css-filters-polyfill.min.js"></script>
+      <script src="../js/css-filters-polyfill.min.js" async defer></script>
     </footer>
   </body>
 </html>
