--- a/index.html
+++ b/index.html
@@ -83,96 +83,6 @@
         </div>
       </div>
       <div style="margin-bottom: 20px"></div>
-      <!--
-      <div class="ui vertical stripe segment" style="border-bottom: none !important;">
-        <div class="ui text container">
-          <div class="center aligned row">
-            <h3 class="ui header hero-center hero-padding">SPECIALISTI</h3>
-          </div>
-        </div>
-        <div class="ui container">
-          <div class="ui raised three stackable cards">
-            <div class="card">
-              <div class="image">
-                <img src="./images/avatar/alberto_macchi.jpg">
-              </div>
-              <div class="content">
-                <div class="header">Alberto Macchi</div>
-                <div class="meta"><i class="calendar check outline icon"></i>&nbsp;Martedì e Venerdì</div>
-                <div class="description">
-                  <div class="ui list">
-                    <div class="item">Specialista in Otorinolaringoiatria</div>
-                    <div class="item">Dirigente Medico Asst Settelaghi - Varese</div>
-                    <div class="item">Clinica Otorinolaringoiatrica Università degli Studi dell'Insubria</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="image">
-                <img src="./images/avatar/paola_terranova.jpg">
-              </div>
-              <div class="content">
-                <div class="header">Paola Terranova</div>
-                <div class="meta"><i class="calendar check outline icon"></i>&nbsp;Venerdì</div>
-                <div class="description">
-                  <div class="ui list">
-                    <div class="item">Specialista in Otorinolaringoiatria</div>
-                    <div class="item">Dirigente Medico Asst Settelaghi - Varese</div>
-                    <div class="item">Clinica Otorinolaringoiatrica Università degli Studi dell'Insubria</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="image">
-                <img src="./images/avatar/elena_digilio.jpg">
-              </div>
-              <div class="content">
-                <div class="header">Elena Digilio</div>
-                <div class="meta"><i class="calendar check outline icon"></i>&nbsp;Giovedì</div>
-                <div class="description">
-                  <div class="ui list">
-                    <div class="item">Specialista in Otorinolaringoiatria</div>
-                    <div class="item">Dirigente Medico Asst Settelaghi - Varese</div>
-                    <div class="item">Clinica Otorinolaringoiatrica Università degli Studi dell'Insubria</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="image">
-                <img src="./images/avatar/alberico_motolese.jpg">
-              </div>
-              <div class="content">
-                <div class="header">Alberico Motolese</div>
-                <div class="meta"><i class="calendar check outline icon"></i>&nbsp;Mercoledì</div>
-                <div class="description">
-                  <div class="ui list">
-                    <div class="item">Specialista in Dermatologia ed Allergologia</div>
-                    <div class="item">Asst Settelaghi - Varese</div>
-                    <div class="item">Direttore S.C. Dermatologia</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="image">
-                <img src="./images/avatar/raffaella_nisoli.jpg">
-              </div>
-              <div class="content">
-                <div class="header">Nisoli Raffaella</div>
-                <div class="meta"><i class="calendar check outline icon"></i>&nbsp;lunedì e martedì</div>
-                <div class="description">
-                  <div class="ui list">
-                    <div class="item">Specialista in Fisiatria</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>-->
       <div class="ui grid container">
         <div class="sixteen wide column">
           <h3 class="ui header hero-center hero-padding" style="font-size: 1.7em;">LA NOSTRA STORIA</h3>
@@ -216,10 +126,10 @@
       </div>
     </div>
     <footer>
-      <script src="./js/jquery-3.3.1.slim.min.js"></script>
-      <script src="./js/semantic.min.js"></script>
-      <script type="text/javascript" src="./js/main.min.js"></script>
-      <script type="text/javascript">
+      <script src="./js/jquery-3.3.1.slim.min.js" async defer></script>
+      <script src="./js/semantic.min.js" async defer></script>
+      <script type="text/javascript" src="./js/main.min.js" async defer></script>
+      <script type="text/javascript" async defer>
         $( document ).ready(function() {
           $('.menu .item').tab();
         });
@@ -228,7 +138,7 @@
         // this is important for IEs
         var polyfilter_scriptpath = '/js/';
       </script>
-      <script src="./js/css-filters-polyfill.min.js"></script>
+      <script src="./js/css-filters-polyfill.min.js" async defer></script>
     </footer>
   </body>
 </html>
